# cf-ddns-ipv6-tauri

./: .gitignore  README.md  README_zh.md  homepage.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  HomepageApp.tsx  api.ts  homepage-main.tsx  i18n.ts  iconify.d.ts  main.tsx  servicePresets.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: carrier_map.rs  cloudflare.rs  config.rs  geoip.rs  lib.rs  main.rs  models.rs  network.rs  secure_store.rs
src-tauri/src/ipv6_stability/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AppErrorBoundary.tsx  CloudflareDnsCard.tsx  DashboardHeader.tsx  FluentIcon.tsx  InterfaceSelectionCard.tsx  LocalHomepageOverviewCard.tsx  NavigationView.tsx  RuntimePreferencesCard.tsx  ServiceManagerCard.tsx  SyncStatusCard.tsx
src/utils/: clipboard.ts
