[package]
name = "cf-ddns-ipv6-tauri"
version = "0.1.0"
description = "Cloudflare IPv6 DDNS desktop client"
authors = ["PLFJY"]
edition = "2021"

[lib]
name = "cf_ddns_ipv6_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
keyring = { version = "3.6.2", default-features = false, features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
mime_guess = "2.0.5"
netdev = "0.31.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.3.1"
tauri-plugin-single-instance = "2.0.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "macros", "net", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock"
] }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14.1"
futures-util = "0.3.31"
